--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <p>Hello, World!</p>
+    <script src="js/socket.io.js"></script>
     <script src="js/main.js"></script>
     <script src="js/websocket.js"></script>
   </body>
