--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style/style.css">
   </head>
-  <body>
-    <p>Hello, World!</p>
+  <body style="margin: 0;">
+    <script src="js/three.js"></script>
     <script src="js/socket.io.js"></script>
     <script src="js/main.js"></script>
     <script src="js/websocket.js"></script>
