--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
   </head>
   <body style="margin: 0;">
-    <script src="js/three.js"></script>
+    <!-- <script src="js/three.js"></script> -->
     <script src="js/socket.io.js"></script>
-    <script src="js/main.js"></script>
+    <script type='module' src="js/main.js"></script>
     <script src="js/websocket.js"></script>
   </body>
 </html>
