--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
   </head>
   <body style="margin: 0;">
+    <div style="position: absolute; top: 0; left: 0; margin: 10px; color:white;">
+      <input type="range" min="2" max="10" value="3" class="slider" id="layersSlider">
+      <span id="layersInfo">Layers: 3</span>
+    </div>
     <!-- <script src="js/three.js"></script> -->
     <script src="js/socket.io.js"></script>
     <script type='module' src="js/main.js"></script>
