reset slider after page reload

--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,8 @@
   </head>
   <body style="margin: 0;">
     <div style="position: absolute; top: 0; left: 0; margin: 10px; color:white;">
-      <input type="range" min="2" max="10" value="3" class="slider" id="layersSlider">
-      <span id="layersInfo">Layers: 3</span>
+      <input type="range" min="2" max="7" value="3" class="slider" id="layersSlider" autocomplete="off">
+      <span id="layersInfo">Layers: 3</div>
     </div>
     <!-- <script src="js/three.js"></script> -->
     <script src="js/socket.io.js"></script>
