--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
       <span id="layersInfo">Layers: 3</div>
     </div>
     <!-- <script src="js/three.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/@tweenjs/tween.js@18.5.0/dist/tween.umd.js"></script>
     <script src="js/socket.io.js"></script>
     <script type='module' src="js/main.js"></script>
     <script src="js/websocket.js"></script>
