add speedcuber mode (theme without inner cubes, it is possible to see through the cube). This feature is still quite buggy, but it will do for now.

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   </head>
   <body style="margin: 0;">
     <div style="position: absolute; top: 0; left: 0; margin: 10px; color:white;">
+      <button id="speedToggle">Toggle speedcuber mode</button>
       <input type="range" min="2" max="7" value="3" class="slider" id="layersSlider" autocomplete="off">
       <span id="layersInfo">Layers: 3</div>
     </div>
