--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
   <body style="margin: 0;">
     <div style="position: absolute; top: 0; left: 0; margin: 10px; color:white;">
       <button id="speedToggle">Toggle speedcuber mode</button>
+      <button onclick="uperm()">U-Perm</button>
+      <button onclick="scramble()">Scramble</button>
       <input type="range" min="2" max="7" value="3" class="slider" id="layersSlider" autocomplete="off">
       <span id="layersInfo">Layers: 3</div>
     </div>
