add FPS slider to adjust fps

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,9 @@
       <button onclick="uperm()">U-Perm</button>
       <button onclick="scramble()">Scramble</button>
       <input type="range" min="2" max="7" value="3" class="slider" id="layersSlider" autocomplete="off">
-      <span id="layersInfo">Layers: 3</div>
+      <span id="layersInfo">Layers: 3</span>
+      <span>   FPS INFO</span> <input type="range" min="5" max="60" value="60" class="slider" id="fpsSlider">
+      FPS <span id="fpsInfo"></span>
     </div>
     <!-- <script src="js/three.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@tweenjs/tween.js@18.5.0/dist/tween.umd.js"></script>
