--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@tweenjs/tween.js@18.5.0/dist/tween.umd.js"></script>
     <script src="js/socket.io.js"></script>
     <script type='module' src="js/main.js"></script>
-    <script src="js/websocket.js"></script>
+    <script type='module' src="js/websocket.js"></script>
   </body>
 </html>
