render another cube in bottom right corner if another user is joined (supports only one other user)

--- a/client/index.html
+++ b/client/index.html
@@ -20,5 +20,6 @@
     <script src="js/socket.io.js"></script>
     <script type='module' src="js/main.js"></script>
     <script type='module' src="js/websocket.js"></script>
+    <canvas id="otherCanvas" style="position: absolute; bottom: 0; right: 0; width: 300; height: 300; display: block;"></canvas>
   </body>
 </html>
