--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
     <script src="js/socket.io.js"></script>
     <script type='module' src="js/main.js"></script>
     <script type='module' src="js/websocket.js"></script>
+    <canvas id="mainCanvas" style="width: 100%; height: 100%; display: block;"></canvas>
     <canvas id="otherCanvas" style="position: absolute; bottom: 0; right: 0; width: 300; height: 300; display: block;"></canvas>
   </body>
 </html>
