convert tween.js import from cdn to latest version of es6 module

--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,8 @@
       FPS <span id="fpsInfo"></span>
     </div>
     <!-- <script src="js/three.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/@tweenjs/tween.js@18.5.0/dist/tween.umd.js"></script>
     <script src="js/socket.io.js"></script>
+    <script type='module' src="js/tween.module.js"></script>
     <script type='module' src="js/main.js"></script>
     <script type='module' src="js/websocket.js"></script>
     <canvas id="mainCanvas" style="width: 100%; height: 100%; display: block;"></canvas>
