--- a/client/index.html
+++ b/client/index.html
@@ -22,5 +22,6 @@
     <script type='module' src="js/websocket.js"></script>
     <canvas id="mainCanvas" style="width: 100%; height: 100%; display: block;"></canvas>
     <canvas id="otherCanvas" style="position: absolute; bottom: 0; right: 0; width: 200px; height: 200px; display: block;"></canvas>
+    <div id="timer" style="color: white; position: absolute; bottom: 0; width: 100%; text-align: center;font-size: 50px;">TIMER</div>
   </body>
 </html>
