add div to show previous times

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
       <span>   FPS INFO</span> <input type="range" min="5" max="60" value="60" class="slider" id="fpsSlider">
       FPS <span id="fpsInfo"></span>
     </div>
+    <div style="position: absolute; top: 40px; left: 10px; color: white" id="times">Times:</div>
     <!-- <script src="js/three.js"></script> -->
     <script src="js/socket.io.js"></script>
     <script type='module' src="js/tween.module.js"></script>
