--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
   </head>
   <body style="margin: 0; height: 100%;">
-    <div style="position: absolute; top: 0; left: 0; margin: 10px; color:white;">
+    <div style="z-index: 1;position: absolute; top: 0; left: 0; margin: 10px; color:white;">
       <button id="speedToggle">Toggle speedcuber mode</button>
       <button onclick="uperm()">U-Perm</button>
       <button onclick="scramble()">Scramble</button>
@@ -15,14 +15,15 @@
       <span>   FPS INFO</span> <input type="range" min="5" max="60" value="60" class="slider" id="fpsSlider">
       FPS <span id="fpsInfo"></span>
     </div>
-    <div style="position: absolute; top: 40px; left: 10px; color: white" id="times">Times:</div>
+    <div style="z-index: 1; position: absolute; top: 40px; left: 10px; color: white" id="times">Times:</div>
     <!-- <script src="js/three.js"></script> -->
     <script src="js/socket.io.js"></script>
     <script type='module' src="js/tween.module.js"></script>
     <script type='module' src="js/main.js"></script>
     <script type='module' src="js/websocket.js"></script>
-    <canvas id="mainCanvas" style="width: 100%; height: 100%; display: block;"></canvas>
+    <canvas id="mainCanvas" style="width: 100%; height: 100%; display: block; position:absolute"></canvas>
+    <div id="otherCanvases" style="width: 20%; height: 100%; position: absolute; display: block; background-color: black; right: 0; border-left-style: solid; border-left-color: white;">AAA</div>
     <canvas id="otherCanvas" style="position: absolute; bottom: 0; right: 0; width: 200px; height: 200px; display: block;"></canvas>
-    <div id="timer" style="color: white; position: absolute; bottom: 0; width: 100%; text-align: center;font-size: 50px;">TIMER</div>
+    <div id="timer" style="z-index: 2; color: white; position: absolute; bottom: 0; width: 80%; text-align: center;font-size: 50px;">TIMER</div>
   </body>
 </html>
