--- a/client/index.html
+++ b/client/index.html
@@ -10,12 +10,14 @@
       <button id="speedToggle">Toggle speedcuber mode</button>
       <button onclick="uperm()">U-Perm</button>
       <button onclick="scramble()">Scramble</button>
+      <button id="reset">Reset cube</button>
       <input type="range" min="2" max="7" value="3" class="slider" id="layersSlider" autocomplete="off">
       <span id="layersInfo">Layers: 3</span>
+      <br>
       <span>   FPS INFO</span> <input type="range" min="5" max="60" value="60" class="slider" id="fpsSlider">
       FPS <span id="fpsInfo"></span>
     </div>
-    <div style="z-index: 1; position: absolute; top: 40px; left: 10px; color: white" id="times">Times:</div>
+    <div style="z-index: 1; position: absolute; top: 80px; left: 10px; color: white" id="times">Times:</div>
     <!-- <script src="js/three.js"></script> -->
     <script src="js/socket.io.js"></script>
     <script type='module' src="js/tween.module.js"></script>
