FIX: reset timer does not stop the timer
now it does!

--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,6 @@
     <canvas id="mainCanvas" style="width: 100%; height: 100%; display: block; position:absolute"></canvas>
     <div id="otherCanvases" style="width: 20%; height: 100%; position: absolute; display: block; background-color: black; right: 0; border-left-style: solid; border-left-color: white;">AAA</div>
     <canvas id="otherCanvas" style="position: absolute; bottom: 0; right: 0; width: 200px; height: 200px; display: block;"></canvas>
-    <div id="timer" style="z-index: 2; color: white; position: absolute; bottom: 0; width: 80%; text-align: center;font-size: 50px;">TIMER</div>
+    <div id="timer" style="z-index: 2; color: white; position: absolute; bottom: 0; width: 80%; text-align: center;font-size: 50px;">timer stopped</div>
   </body>
 </html>
