center main cube and timer

--- a/client/index.html
+++ b/client/index.html
@@ -19,11 +19,13 @@
       <span id="fpsInfo"></span> -->
     </div>
 
-    <div  id="times">Times:</div>
-    <canvas id="mainCanvas"></canvas>
+    <div id="mainScreen">
+      <div  id="times">Times:</div>
+      <canvas id="mainCanvas"></canvas>
+      <div id="timer">timer stopped</div>
+    </div>
     <div id="otherCanvases"></div>
     <canvas id="otherCanvas"></canvas>
-    <div id="timer">timer stopped</div>
 
     <script type='module' src="js/main.js"></script>
     <script type='module' src="js/websocket.js"></script>
