feat: add replay last solve feature

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
       <button id="upermButton"">U-Perm</button>
       <button id="scrambleButton">Scramble</button>
       <button id="reset">Reset cube</button>
+      <button id="replay">Replay last solve</button>
       <input type="range" min="2" max="7" value="3" class="slider" id="layersSlider" autocomplete="off">
       <span id="layersInfo">Layers: 3</span>
       <!-- <br> -->
